Multiple rooms completed with a looping dead end

--- a/views/deadend.erb
+++ b/views/deadend.erb
@@ -1,7 +1,9 @@
-<h1>Whoops! Dead End. Go back.</h1>
 
-<form action="/deadend" method="post">
-  <div class="row">
-    <button type="button" class="btn btn-primary" name="select" value="backward">Backward</button>
-  </div>
-</form>
+
+  <h1>Whoops! Dead End. Go back.</h1>
+
+  <form action="/deadend" method="post">
+    <div class="row">
+      <button type="submit" class="btn btn-primary" name="select" value="backward">Backward</button>
+    </div>
+  </form>
