--- a/views/room_three.erb
+++ b/views/room_three.erb
@@ -1,20 +1,21 @@
 <h1>Room Two</h1>
+<form action="/room3" method="post">
+  <div class="container">
+    <div class="row">
+      <button type="submit" class="btn btn-primary" name= "select" value="forward">Forward</button>
+    </div>
 
-<div class="container">
-  <div class="row">
-    <button type="button" class="btn btn-primary" value="forward" disabled>Forward</button>
+    <br>
+
+    <div class="row">
+      <button type="submit" class="btn btn-primary" name= "select" value="left">Left</button>
+      <button type="submit" class="btn btn-primary" name= "select" value="right">Right</button>
+    </div>
+
+    <br>
+
+    <div class="row">
+      <button type="submit" class="btn btn-primary" name= "select" value="backward">Backward</button>
+    </div>
   </div>
-
-  <br>
-
-  <div class="row">
-    <button type="button" class="btn btn-primary" value="left">Left</button>
-    <button type="button" class="btn btn-primary" value="right">Right</button>
-  </div>
-
-  <br>
-
-  <div class="row">
-    <button type="button" class="btn btn-primary" value="backward">Backward</button>
-  </div>
-</div>
+</form>
