--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <title>Sphynx</title>
+    <title>MAZE</title>
   </head>
   <body>
     <div class="container">
