--- a/views/room_four.erb
+++ b/views/room_four.erb
@@ -1,3 +1,5 @@
+<h1>Room 3</h1>
+
 <div class="container">
   <div class="row">
     <button type="button" class="btn btn-primary" value="forward" disabled>Forward</button>
